Fixed scrollbar causing output to get cut off

--- a/styles/gulp-manager.less
+++ b/styles/gulp-manager.less
@@ -135,6 +135,7 @@
   .output-view {
     height: 100%;
     display: flex;
+    flex: 1;
 
     .content-container {
       display: flex;
